      'debian' in its upstream source.

  [ James McCoy ]
  * checkbashisms:
    + Recognize dash as a valid shell.
    + Check scripts which use “#!/path/to/env $interpreter”
  * debian/tests/control: Add gcc as a dependency for dpkg-architecture.

  [ Christoph Berg ]
  * debcheckout: Add auth mapping for https://github.com.

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 05 Jan 2016 13:01:05 -0200

devscripts (2.15.10) unstable; urgency=low

  [ Benjamin Drung ]
  * test_uscan: Fix failure in testFileExclusion due to wrong tarfile name
    test on Ubuntu.

  [ Nicholas Bamber ]
  * Fixed issues with current bash completion (Closes: #804492)
    + Reorganised scripts/Makefile so that bash completion scripts
      are installed matching their command names - an exception being the
      generic pkgnames.bash_completion.
    + Where necessary added links to bash completion scripts
      to debian/links to reuse bash completion code
    + Removed deprecated "have" mechanism from bash completion scripts.
    + Removed undefined "$filenames" from chdist.bash_completion
    + Split debi.bash_completion off from pkgnames.bash_completion
      and added links for both debi/debc and corrected complete commands
  * Added custom bash completion support for bts (Closes: #499886)
    + Added --soap-timeout option to bts
    + Added listcachedbugs command to bts
    + Split out bts bash completion handling into its own script
  * Added custom bash completion support for debuild, checkbashisms,
    list-unreleased, dscverify, dscextract, what-patch, plotchangelog,
    debdiff and licensecheck
  * Updated custom bash completion handling for mk-origtargz
  * Added debcheckout to those commands with package names bash completion
  * licensecheck:
    + Tweaked parselicense to capture 'and or' as well as
      'and/or' in GPL licenses (Closes: #559429)
    + Added test for licensecheck versus Software::License